--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ main {
   font-size: 18px;
   padding: 16px 32px;
   border: 50px 50px;
+  z-index: 2;
   }
 
 .image:hover img {
@@ -69,7 +70,11 @@ main {
   display: block;
 }
 
-form.searchrecipes button {
+#video1 {
+  z-index: -1;
+}
+
+/*form.searchrecipes button {
   float: right;
   width: 20%;
   padding: 10px;
@@ -79,7 +84,7 @@ form.searchrecipes button {
   border: 1px solid grey;
   border-left: none;
   cursor: pointer;
-}
+}*/
 
 #profile {
   border-radius: 50%;
@@ -87,7 +92,14 @@ form.searchrecipes button {
   height: 20%;
 }
 
-.searchrecipes input {
+.searchrecipes.textarea {
   min-width: 250px;
   min-height: 30px;
+}
+
+input#submit {
+background: white;
+padding: 0px;
+height: 16px;
+width: 16px;
 }
