--- a/style.css
+++ b/style.css
@@ -1,5 +1,53 @@
+/*border box*/
 * {
   box-sizing: border-box;
+}
+
+/* grid */
+.grid {
+  display: grid;
+  border: 1px black solid;
+  width: auto;
+  height: 1950px;
+  grid-template-columns: 2fr, 1fr;
+  grid-template-rows: repeat(26, 75px);
+}
+.box {
+  border: 1px dodgerblue solid;
+  z-index: 2;
+}
+
+.a {
+grid-area: 1 / 1 / 3 / span 2;
+display: flex;
+}
+
+.b {
+grid-area: 3 / 1 / 6 / span 2;
+}
+
+.c {
+grid-area: 6 / 1 / 13 / 2;
+}
+
+.d {
+grid-area: 6 / 2 / 14 / span 1;
+}
+
+.e {
+grid-area: 13 / 1 / 21 / 2;
+}
+
+.f {
+grid-area: 14 / 2 / 21 / span 1;
+}
+
+.g {
+grid-area: 21 / 1 / 25 / span 2;
+}
+
+.h {
+grid-area: 25 / 1 / span 2 / span 2;
 }
 
 /*links*/
@@ -23,38 +71,61 @@ a:active {
   text-decoration: underline;
 }
 
-checkbox {
-font-family: 'PT Sans';
+
+/* header */
+header {
+  /* background-color: white; */
+/* position:fixed; */
+background-color: hsla(19, 63%, 50%, 0.42); 
 }
 
+/* navigation logo */
 nav img {
 width: 40px;
 height: 40px;
-display: inline-block;
+/* display: inline-block; */
 cursor: context-menu;
 margin: 10px;
 }
 
+/* allrecipes logo */
 #mainlogo img{
-width: 30%;
-height: 30%;
-clear: none;
-margin: 0 auto;
-/*position: relative;*/
+width: 20%;
+height: 20%;
+display: border-box;
+padding: 50px auto;
+    align-items: flex-start;
+}
+/* login sign up */
+header p {
+align-items: flex-end;
+width: 100px;
+height: 20px;
+font-size: 20px;
 }
 
-header {
-  position:static;
-  background-color: hsla(19, 63%, 50%, 0.5);
-  /*background-color: hsla(43, 100%, 57%, 0.4);*/
-  /*display: grid;
-  height: 100px;
-  width: auto;*/
-
+/* search recipes */
+.searchrecipes #textarea {
+  min-width: 250px;
+  min-height: 22px;
+  margin: 30px 5px 0px auto;
+  align-items: flex-end;
+  object-position: right bottom;
 }
+
+input#submit {
+background: white;
+padding: 30px 10px 10px auto;
+height: 20px;
+width: 20px;
+align-items: flex-end;
+object-position: right bottom;
+}
+
+/* main */
 
 .ingredient,
-.step,
+#step,
 .nutrition h3,
 #frosting {
   font-family: 'Merriweather', serif;
@@ -67,12 +138,19 @@ main h1 {
 
 .browniesimage {
   border-radius: 5px;
-  width:60%;
-  height: 35%;
+  width:40%;
+  height: 40%;
   transition: .5s ease;
   margin: 10px, 10px, 5px, 10px;
-  display: block;
+  /* display: block; */
 }
+
+.list,
+.frostinglist {
+font-family: 'PT Sans';
+  font-size: 16px;
+}
+
 
 main {
   background-color: hsla(60, 56%, 91%, 0.5);
@@ -80,8 +158,8 @@ main {
 .watch {
   z-index: 2;
   border-radius: 4px;
-  width: 15%;
-  height: 15%;
+  width: 10%;
+  height: 10%;
   }
 
 .browniesimage:hover  {
@@ -96,49 +174,54 @@ main {
 }
 
 .browniesimage {
-  display: block;
+  /* display: block; */
 }
 
 #profile {
   border-radius: 50%;
-  width: 7%;
-  height: 7%;
+  width: 5%;
+  height: 5%;
 }
 
-.searchrecipes #textarea {
-  min-width: 250px;
-  min-height: 22px;
-}
 
-input#submit {
-background: white;
-padding: 0px;
-height: 16px;
-width: 16px;
+/* steps */
+.step {
+background: hsla(60, 62%, 95%, 1);
+padding: 13px;
+margin: 8px;
+border: 4px dashed hsla(14, 65%, 45%, 0.4);
+max-width: 600px;
+overflow: scroll;
+
 }
 
 .steps {
   font-family: 'PT Sans';
+  font-size: 16px;
 }
 
+#above-steps-line.solid {
+border-top: 2px solid hsla(14, 65%, 45%, 0.4);
+width: 100px;
+left: 5px;
+}
+/* nutrition */
 .nutrition p {
 font-family: 'PT Sans';
 }
 
+/* see other section */
 .see-other img{
-width: 40%;
-height: 40%;
+width: 25%;
+height: 25%;
 margin: 0px 0px;
-display: flex;
-flex-direction: column;
+/* display: flex;
+flex-direction: column; */
+justify-content: end;
+display: grid;
 }
 
-nav img,
-nav figure#mainlogo,
-header p,
-header input{
-  display: inline-block;
-}
+/*footer*/
 
 footer {
   background-color: hsla(132, 9%, 89%, 0.8);
@@ -147,64 +230,64 @@ footer {
 
 #above-footer-line.solid {
   border-top: 3px solid hsla(14, 65%, 45%, 0.5);
-}
+}/*horizontal line divider*/
 
 #footer-logo {
-width: 20%;
-height: 10%;
+width: 15%;
+height: 8%;
 padding: 10px;
 clear: both;
+margin: 10px auto;
 }
 
 footer h4 {
-  font-family: 'Public Sans';
-  font-size: 14px;
+  font-family: 'Source Sans Pro';
+  font-size: 18px;
+  letter-spacing: .4px;
 }
 
 footer h3 {
 font-family: 'Carter One';
 color: hsla(0, 0%, 0%, 0.85);
+letter-spacing: .5px;
 }
-
 
 footer .subscribe-icons img {
 border-radius: 50%;
 width: 30px;
 height: 30px;
 margin: 10px;
-}
-
-#below-footer-line.solid {
-  border-top: 1px solid hsla(0, 0%, 73%, 0.5);
-}
+}/* social media icons */
 
 .vl {
   border-left: 1px solid grey;
   height: 200px;
   position: absolute;
   left: 50%;
-}
+}/*vertical line divider*/
+
+#below-footer-line.solid {
+  border-top: 1px solid hsla(0, 0%, 73%, 0.5);
+}/*horizontal line divider*/
 
 /*copyright*/
-
-#meredith {
-width: 18%;
-height: 18%;
-margin: 20px auto;
-}
 
 .copyright {
   background-color:white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   width: 100%;
-}
+}/*copyright section*/
+
+#meredith {
+width: 12%;
+height: 30%;
+margin: 20px auto;
+}/*meredith logo*/
 
 .copyright p {
   font-family: Lato;
-  font-size: 12px;
-justify-content: center;
+  font-size: 14px;
 margin: 0 auto;
 overflow: scroll;
-}
+}/*copyright text*/
